[BUILD] Add Robolectric Compose UI tests to core UI option